feat: add MDXVideo component

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
   --primary-dark: #4e5e54;
   --link: #2c6e61;
   --accent: #e0b973;
-  --code: #f2f4f1;
+  --code: #e4f0e1;
   --border: #c0d6d4;
 }
 
